# Image_Tool

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: copilot-agent-plan.md  processor-interface.md  v1-first-update-guide.md
src/: App.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: batch.rs
src-tauri/src/core/: batch_job_runner.rs  file_discovery.rs  mod.rs  output_resolver.rs  processor.rs  registry.rs  report.rs
src-tauri/src/core/processors/: compress.rs  format_convert.rs  mod.rs  rename.rs  repair.rs  resolution_transform.rs  trim_transparent.rs
src-tauri/tests/: batch_job_runner_tests.rs  compress_tests.rs  format_convert_tests.rs  repair_tests.rs  resolution_transform_tests.rs  trim_transparent_tests.rs
src/components/: BatchInputPanel.tsx  FileInspectorPanel.tsx  FunctionSelector.tsx  RenameRulePanel.tsx  ResultSummaryPanel.tsx  TaskQueuePanel.tsx  WorkflowBuilder.tsx
src/lib/: types.ts
src/lib/api/: tauri.ts
src/store/: taskStore.ts
